test/Harper/Tests/Bad/issue3_invType.har
main = g 42;

g n = f n "Str";

f x y = x * y;
