test/Harper/Tests/Bad/issue3_invType.out
Error: expression `y` has invalid type 'String'; expected 'Integer'.
During evaluation of: 
 x * y
Located at line 5 column 9 

Execution terminated with an error: runtime error.